# clipper

./: CMakeLists.txt  conandata.yml
clipper/: CMakeLists.txt  clip.cpp  clipper.cpp  clipper.hpp
clipperxyz/: clipper.cpp  clipper.hpp
